--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -313,6 +313,10 @@ rect.highlight {
   background-color: #ffedf2;
 }
 
+.znconfig-button{
+  padding: 1px;
+}
+
 #statusbar-layout .w2ui-tb-caption {
   vertical-align: top;
 }
