see #126, player/selector highlight in different styles

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <%=
   def nc(name)
-    build = GITSHA rescue "dev"
+    build = GITSHA rescue Time.now().to_s
     %Q{#{name}?#{build}}
   end
 
