--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -271,6 +271,13 @@ rect.highlight {
   fill-opacity: 0.2
 }
 
+rect.highlightplay {
+  fill: blue !important;
+  fill-opacity: 0.5;
+
+}
+
+
 .zn-nilfield {
   border: 1px solid #b5b4b6 !important;
   background-color: #b5b4b6 !important;
