--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -191,6 +191,10 @@ rect.highlight {
   fill: red;
   fill-opacity: 0.2; }
 
+rect.highlightplay {
+  fill: blue !important;
+  fill-opacity: 0.5; }
+
 .zn-nilfield {
   border: 1px solid #b5b4b6 !important;
   background-color: #b5b4b6 !important; }
