--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -56,7 +56,7 @@
 </div>
 <div id="statusbar-layout" style="height:25px">
 </div>
-<input id="file_input" style="display:none;" type="file" accept=".abc, .mxl, .xml"/>
+<input id="file_input" style="display:none;" type="file" accept=".abc, .mxl, .xml, .jpg, -png"/>
 
 <%= begin
       result = javascript_include_analytics()
