#198 WIP Support llustrations
Another step for illustrations

TODO

* it is pretty slow with large illustrations
* no drag & drop
* no opacity (did not work on pdf)
* update manual
* remove new global $image_list

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -56,7 +56,7 @@
 </div>
 <div id="statusbar-layout" style="height:25px">
 </div>
-<input id="file_input" style="display:none;" type="file" accept=".abc, .mxl, .xml, .jpg, -png"/>
+<input id="file_input" style="display:none;" type="file" accept=".abc, .mxl, .xml, .jpg"/>
 
 <%= begin
       result = javascript_include_analytics()
