see #202 refactored toolbar for left pane such that we have individual toolbars per tab.
* reduces the number of Menu - lines
* enables more flexible toolbars per tab

--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -295,6 +295,14 @@ rect.highlightplay {
   vertical-align: middle;
 }
 
+.w2ui-toolbar {
+  background-color: #ffffff;
+  padding: 0px;
+  overflow:hidden;
+  height:30px;
+  border-bottom: 1px solid #b5b4b6;
+}
+
 .w2ui-overlay {
   color: black;
   p{
