--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -330,6 +330,11 @@ rect.highlightplay {
 
 .znconfig-button{
   padding: 1px;
+  width: 1.2em;
+  box-shadow: none;
+  &::before {
+    margin: -5px;
+  }
 }
 
 #statusbar-layout .w2ui-tb-caption {
