now rake also builds application for web server with worker

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -40,6 +40,7 @@
   <link rel="stylesheet" type="text/css" href="<%=nc("public/index.css")%>"/>
 
   <script type="text/javascript" src="<%=nc("vendor/w2ui/dist/w2ui.min.js")%>"></script>
+  <script id="buster" type="text/json">{"buster":"<%=nc('')%>"}</script>
 
   <style>
     .spinner {
