--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: #0A425C;
-  color: green;
+  color: black;
   margin: 0px;
   vertical-align: center; }
 
