--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -13,7 +13,7 @@ $containerColor: white;
 body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: $backgoundColor;
-  color: green;
+  color: black;
   margin: 0px;
   vertical-align: center;
 }
